# outcome-engineering

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile.hosted  README.md  agr.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: agent-entry-points.md  example-structure.md  framework.md  glossary.md  graph.md  oe-serve-ui-inventory.md
docs/diary/: 2026-06-25-initial-framework-draft.md  2026-06-26-agent-entry-point-docs.md  2026-06-26-agent-readiness-commands.md  2026-06-26-challenge-assumptions-feedback.md  2026-06-26-cli-mvp.md  2026-06-26-compact-challenge-assumptions-skill.md  2026-06-26-example-product-graph-generator.md  2026-06-26-opportunity-assumptions.md  2026-06-26-playwright-style-skill-install.md  2026-06-26-product-vision-strategy.md  2026-06-26-skill-install-ux.md  2026-06-26-strategic-skills.md  2026-06-26-trace-and-new-commands.md  2026-06-26-trim-docs.md  2026-06-26-update-challenge-assumptions-skill.md  2026-06-27-assumption-tests.md  2026-06-27-graph-viz-ui.md  2026-06-27-icp-placement.md  2026-06-27-serve-editable-graph.md  2026-06-28-comprehensive-ui-test-graph.md  2026-06-28-full-node-titles.md  2026-06-28-oe-grill-skill.md  2026-06-28-overview-strategy-vision-ui.md  2026-06-28-remove-strategic-skills.md  2026-06-28-time-bounded-strategy.md  2026-06-29-add-oe-validate-skill.md  2026-06-29-tag-based-release-pipeline.md  2026-06-29-tighten-product-graph-method.md  2026-06-30-align-example-graphs-best-practices.md  (+10 more)
product/: STRATEGY.md  VISION.md
scripts/: create_example_product_graph.py
tests/: test_graph.py
(+235 files in other folders)
