[project]
name = "outcome-engineering"
version = "0.1.1"
description = "Repo-native product graph tooling for Outcome Engineering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
oe = "outcome_engineering.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
